--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "firebase": "^7.5.2",
+    "bootstrap": "^5.2.3",
+    "firebase": "^9.15.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "react-with-firebase-auth": "^1.2.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "3.2.0",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
+    "webpack": "^4.41.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "redux-logger": "^3.0.6"
   }
 }
